css/style.css
/* *****************************************
 * Variables
 * *****************************************/
:root {
    /* COLORS STUDY 

    * MAIN *
    #141922; | sfondo
    #7c7e83; | testo
    #ffffff; | headers e bottoni

    * SIDEBAR *
    #000000; | sfondo
    #717171; | testi
    #a3a3a3; | icone
    #d2d2d2; | icone active
    #ffffff; | headers e testi active

    * PLAYER *
    #282828; | sfondo
    #5a5a5a; | testo e sfondo barra
    #c1c1c1; | barra
    #ffffff; | headers e bottoni

    * CUSTOM SCROLLBAR *
    #fafafa | background
    #c8c8c8 | thumb
    
    */

    /* palette */
    --col-gray-900: #141922;
    --col-gray-700: #282828;
    --col-gray-500: #5a5a5a;
    --col-gray-400: #7c7e83;
    --col-gray-100: #c1c1c1;
    --col-green: #adff2f;

    /* layout */
    --layout-bottom: 100px;
    --layout-side-sm: 50px;
    --layout-side-md: 230px;

    --gallery-gutter: 0.5rem;

    /* commons */
    --main-header-height: 90px;
}


/* *****************************************
 * Resets
 * *****************************************/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}


/* *****************************************
 * Generics
 * *****************************************/
html {
    font-size: 14px;
}

body {
    font-family: 'Montserrat', sans-serif;
    background-color: var(--col-gray-900);
    color: var(--col-gray-400);
}

h2,
h4,
h5 {
    color: #fff;
}

h2 {
    font-size: 1.8rem;
    margin-bottom: 1rem;
}

h4 {
    font-size: 1.1rem;
    margin-bottom: 0.5rem;
}

h5 {
    font-size: 1rem;
    margin-bottom: 0.15rem;
}

p {
    margin-bottom: 1rem;
}

a {
    color: inherit;
    text-decoration: none;
}

ul {
    list-style: none;
}

section {
    padding: 0 1.5rem;
}


/* *****************************************
 * Utils
 * *****************************************/
/* Misc */
.img-fluid {
    max-width: 100%;
    height: auto;
    display: block;
}


/* Text */
.text-left {
    text-align: left;
}

.text-center {
    text-align: center;
}

.text-right {
    text-align: right;
}


/* Font */
.font-big {
    font-size: 16px;
}

.font-bold {
    font-weight: bold;
}


/* Colors */
.text-white {
    color: #fff;
}

.bg-gray-400 {
    background-color: var(--col-gray-400);
}


/* Display */
.d-none {
    display: none;
}

.d-inline {
    display: inline;
}

.d-inline-block {
    display: inline-block;
}

.d-flex {
    display: flex;
}


/* *****************************************
 * Layout
 * *****************************************/
/* App Layout */
.layout-top {
    height: calc(100vh - var(--layout-bottom));
    display: flex;
}

.layout-bottom {
    height: var(--layout-bottom);
}

.layout-side {
    flex: 0 0 var(--layout-side-sm);
    overflow: hidden;
}

.layout-main {
    flex-grow: 1;
    overflow-y: auto;
}


/* Margins */
.mb-0 {
    margin-bottom: 0;
}

.mb-1 {
    margin-bottom: 0.5rem;
}

.mb-2 {
    margin-bottom: 1rem;
}

.mb-3 {
    margin-bottom: 1.5rem;
}

.mb-4 {
    margin-bottom: 2rem;
}

.mr-0 {
    margin-right: 0;
}

.mr-1 {
    margin-right: 0.5rem;
}

.mr-2 {
    margin-right: 1rem;
}

.mr-3 {
    margin-right: 1.5rem;
}

.mr-4 {
    margin-right: 2rem;
}


/* *****************************************
! Debug
* ******************************************/
.db-border {
    border: 2px dashed #fff;
}

.db-red {
    background-color: red;
}

.db-yellow {
    background-color: yellow;
}

.db-blue {
    background-color: blue;
}

.db-green {
    background-color: green;
}

.db-cyan {
    background-color: cyan;
}

.db-purple {
    background-color: purple;
}


/* ?===============================================================
? ELEMENTS
?==================================================================*/

/* *****************************************
 * Buttons
 * *****************************************/
.btn {
    display: inline-block;
    text-decoration: none;
    text-align: center;
    border: 1px solid transparent;
    cursor: pointer;
    
    color: #000;
    background-color: transparent;
    border-radius: 22px;
    font-weight: bold;
}

.btn.btn-light {
    color: #fff;
}

.btn.btn-outline-light {
    color: #fff;
    border-color: currentColor;
}

.btn.btn-secondary {
    color: var(--col-gray-400);
}

.btn.btn-big {
    padding: 10px 40px;
}


/* *****************************************
 * Icons
 * *****************************************/
.icon {
    width: 28px;
    height: 28px;
    fill: currentColor;

    display: inline-flex;
    justify-content: center;
    align-content: center;
}

.icon.icon-small {
    width: 18px;
    height: 18px;
}

.icon.icon-big {
    width: 38px;
    height: 38px;
}

.icon.icon-rounded {
    border-radius: 50%;
}

.icon.icon-light {
    color: #fff;
}

.icon.icon-black {
    color: #000;
}



/* *****************************************
 * Sidebar
 * *****************************************/
.sidebar {
    display: flex;
    flex-direction: column;
    justify-content: space-between;

    font-weight: bold;

    background-color: #000;
}

.sidebar-top {
    display: flex;
    flex-direction: column;

    min-height: 200px;
}

.sidebar a {
    display: block;
    line-height: 1;
}

.sidebar a > * {
    vertical-align: middle;
}

/* Logo */
.sidebar-logo {
    padding: 0.5rem 0;
}

.sidebar-logo .logo-sm {
    width: 32px;
}

.sidebar-logo .logo-md {
    width: 140px;
}

/* Menu */
.sidebar-menu a {
    padding: 0.25rem 0;

    position: relative;
}

.sidebar-menu a.active {
    color: #fff;
}

.sidebar-menu a.active::before {
    background-color: var(--col-green);

    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    width: 4px;
}


/* Playlist */
.sidebar-playlist {
    flex-direction: column;
    padding: 0 1.5rem;

    min-height: 100px;
}

.sidebar-playlist ul {
    overflow-y: auto;
}

.sidebar-playlist ul a {
    padding: 0.8rem 0;
}


/* Actions */
.sidebar-actions a {
    padding: 0.5rem 0;
}


/* *****************************************
 * Main Header
 * *****************************************/
.main-header {
    height: var(--main-header-height);
    padding: 1.5rem;

    position: sticky;
    top: 0;
    left: 0;
    z-index: 1;

    background-color: rgba(0, 0, 0, 0.5);
}


/* *****************************************
 * Main Navbar
 * *****************************************/
.main-navbar ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.main-navbar a {
    display: block;
    padding: 1.2rem 1rem;
    font-weight: bold;
    text-transform: uppercase;

    position: relative;
}

.main-navbar a.active::after {
    content: '';
    width: 30px;
    height: 2px;
    background-color: var(--col-green);

    position: absolute;
    bottom: 10px;
    left: 50%;
    transform: translateX(-50%);
}


/* *****************************************
 * Gallery
 * *****************************************/
.gallery {
    display: flex;
    flex-wrap: wrap;
    margin-left: calc(var(--gallery-gutter) * -1);
    margin-right: calc(var(--gallery-gutter) * -1);

    margin-top: 1.5rem;
}

.media {
    flex-basis: calc(50% - (var(--gallery-gutter) * 2));
    margin: var(--gallery-gutter);
    text-align: center;
}

.media-img {
    display: block;
    margin-bottom: 1.5rem;

    color: #fff;
    font-size: 48px;

    position: relative;
}

.media-img.media-img-rounded {
    border-radius: 50%;
    overflow: hidden;
}

.media-img:hover img {
    filter: brightness(0.5);
}

.media-img:hover::after {
    content: '\f144';
    display: inline-block;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
    font: var(--fa-font-regular);

    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.media-subtitle {
    font-weight: bold;
}


/* *****************************************
 * Footer
 * *****************************************/
footer {
    padding: 1rem 0;
    display: flex;
    font-size: 12px;

    background-color: var(--col-gray-700);
}

footer > * {
    flex-basis: calc(100% / 3);
}

.player-info {
    display: flex;
    padding: 0 1rem;
    gap: 0.5rem;
}

.player-info-left {
    display: flex;
    align-items: center;
    gap: 0.5rem;
}

.player-info-left img {
    width: 35px;
}

.player-info-right {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 0.5rem;
}


/* ?===============================================================
? RESPONSIVE
?==================================================================*/

/*? Media Query SM */
 @media screen and (min-width: 576px) {

    /* *****************************************
     * Utils
     * *****************************************/
    /* Display */
    .d-sm-none {
        display: none;
    }
    
    .d-sm-inline {
        display: inline;
    }
    
    .d-sm-inline-block {
        display: inline-block;
    }

    .d-sm-flex {
        display: flex;
    }


    /* Text */
    .text-sm-left {
        text-align: left;
    }
    
    .text-sm-center {
        text-align: center;
    }
    
    .text-sm-right {
        text-align: right;
    }

    
    /* *****************************************
     * App Layout
     * *****************************************/
    .layout-side {
        flex-basis: var(--layout-side-md);
    }


    /* *****************************************
     * Sidebar
     * *****************************************/
    /* Sidebar logo */
    .sidebar-logo {
        padding: 1.5rem;
    }


    /* Sidebar menu */
    .sidebar-menu a {
        padding: 0.25rem 1.5rem;
    }

    .sidebar-menu a.active::before {
        content: '';
    }


    /* Sidebar actions */
    .sidebar-actions {
        padding: 0 1.5rem;
    }

    .sidebar-actions li:first-child {
        border-bottom: 1px solid var(--col-gray-400);
    }

 }


/*? Media Query MD */
 @media screen and (min-width: 768px) {

    /* *****************************************
     * Gallery
     * *****************************************/
    .media {
        flex-basis: calc(25% - (var(--gallery-gutter) * 2));
    }

 }


/*? Media Query LG */
 @media screen and (min-width: 992px) {

    /* *****************************************
     * Gallery
     * *****************************************/
    .media {
        flex-basis: calc(100% / 6 - (var(--gallery-gutter) * 2));
    }

 }

